--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="logo">
-          <img src="/images/icon.png" alt="Das Keyboard Logo" width="75" height="100">
+          <img src="{{ site.baseurl }}images/icon.png" alt="Das Keyboard Logo" width="75" height="100">
         </div>
           <p class="site-footer__link-list">
             <a href="https://www.daskeyboard.com">back to Das Keybord</a> &bull;
