--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,20 +3,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{page.title}} {% if page.homepage != true %} - {{ site.title }} {% endif %}</title>
-  <link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.baseurl  }}">
+  <link rel="shortcut icon" href="{{ "/images/favicon.png"  | relative_url  }}">
 
   <meta name="description" content="{% if page.summary %}{{ page.summary | strip_html | strip_newlines | truncate: 160 }}{% endif %}">
   <meta name="keywords" content="{{page.tags}}{% if page.tags %}, {% endif %} {{page.keywords}}">
   
-  <link rel="stylesheet" href="{{ "/css/lavish-bootstrap.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> 
+  <link rel="stylesheet" href="{{ "/css/lavish-bootstrap.css"  | relative_url }}">
+  <link rel="stylesheet" href="{{ "/css/main.css"  | relative_url }}"> 
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Extended" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro%7CRoboto:500,400italic,300,400" rel="stylesheet">
   {% for css_name in page.extra_css %}
       <link rel="stylesheet" href="{{ css_name }}">
   {% endfor %}
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html',''  | relative_url | prepend: site.url }}">
   <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
   <script>
     // Initialize Firebase
