--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,16 +3,16 @@
     <div class="row">
       <div class="col-md-12">
         <i class="fa fa-bars" id="sidebar-toggle-button" aria-hidden="true" style="display:none"></i>
-        <img src="/images/icon.png" alt="Das Keyboard Logo" width="24" height="32" style="vertical-align:middle">
+        <img src="{{site.baseurl}}images/icon.png" alt="Das Keyboard Logo" width="24" height="32" style="vertical-align:middle">
 
-        <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <a class="site-title" href="{{ site.baseurl }}">{{ site.title }}</a>
 
         <nav class="site-nav">
           <a href="#" class="menu-icon">
             <i class="material-icons-extended">more_vert</i>
           </a>
           <div class="trigger">
-            <a class="page-link" href="/docs/">Docs</a>
+            <a class="page-link" href="{{site.baseurl}}docs/">Docs</a>
             <a class="page-link" href="https://github.com/DasKeyboard/q-website">GitHub</a>
             <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
             <form action="/search/" class="nav-searchbox" id="cse-search-box" style="display: inline">
