--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,9 +51,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="{{ "/js/sidebar_toggle.js" | relative_url }}"></script>
-    <script src="{{ "/js/prism.js" | relative_url}}"></script>
-    <script src="{{ "/js/tabs.js" | relative_url }}"></script>
+    <script src="{{ "/js/sidebar_toggle.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/prism.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/tabs.js" | prepend: site.baseurl }}"></script>
     
     <script async="" defer="" src="//survey.g.doubleclick.net/async_survey?site=at3ul57xpub2vk3oxt2ytw365i"></script>
   </body>
