--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             <a class="page-link" href="https://github.com/DasKeyboard/q-website">GitHub</a>
             <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
             <form action="/search/" class="nav-searchbox" id="cse-search-box" style="display: inline">
-              <input type="hidden" name="cx" value="007067728241810524621:gm6vraqlc8c">
+              <input type="hidden" name="cx" value="001344149833008068451:qbwkqh1petc">
               <input type="hidden" name="ie" value="UTF-8">
               <input type="hidden" name="hl" value="en">
               <input type="search" name="q" id="q" autocomplete="off" placeholder="Search">
