Add Bootstrap 4, add a navbar in the Home page, modify the design of the Home page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <meta name="description" content="{% if page.summary %}{{ page.summary | strip_html | strip_newlines | truncate: 160 }}{% endif %}">
   <meta name="keywords" content="{{page.tags}}{% if page.tags %}, {% endif %} {{page.keywords}}">
   
-  <link rel="stylesheet" href="{{ "css/lavish-bootstrap.css"  | relative_url }}">
+  <link rel="stylesheet" href="{{ "css/css-bootstrap/bootstrap.css"  | relative_url }}">
   <link rel="stylesheet" href="{{ "css/main.css"  | relative_url }}"> 
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Extended" rel="stylesheet">
