--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
           <p class="site-footer__link-list">
             <a href="https://www.daskeyboard.com">www.daskeyboard.com</a> &bull;
             <a href="https://twitter.com/daskeyboard">Twitter</a> &bull;
-            <a href="https://github.com/DasKeyboard">Github</a> &bull;
+            <a href="https://github.com/metadot">Github</a> &bull;
             <a href="https://qforum.daskeyboard.com/">Forum</a>
           </p>
 
