--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,10 +22,10 @@
     // Initialize Firebase
     var config = {
       apiKey: "AIzaSyCymDaJN7cjeIW8fHiHu-JyvtH5We-gamw",
-      authDomain: "daskeyboard.github.io-fafc7.firebaseapp.com",
-      databaseURL: "https://daskeyboard.github.io-fafc7.firebaseio.com",
-      projectId: "daskeyboard.github.io-fafc7",
-      storageBucket: "daskeyboard.github.io-fafc7.appspot.com",
+      authDomain: "DasKeyboard.github.io-fafc7.firebaseapp.com",
+      databaseURL: "https://DasKeyboard.github.io-fafc7.firebaseio.com",
+      projectId: "DasKeyboard.github.io-fafc7",
+      storageBucket: "DasKeyboard.github.io-fafc7.appspot.com",
       messagingSenderId: "946286108585"
     };
     firebase.initializeApp(config);
