--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -42,10 +42,10 @@
                 {% unless page.hide_title %}
                 <header class="post-header">
                     <div class="btn-group contribute" role="group">
-                       <a href="https://github.com/metadot/DasKeyboard.github.io/blob/master/{{page.path}}" class="btn btn-sm">
+                       <a href="https://github.com/DasKeyboard/DasKeyboard.github.io/blob/master/{{page.path}}" class="btn btn-sm">
                           <i class="fa fa-pencil"></i> Edit Source
                        </a>
-                       <a href="https://github.com/metadot/DasKeyboard.github.io/issues/new?title=Issue from website page {{page.title}}&body=From URL: {{site.url}}/{{page.path}}&labels=dev: docs - website" class="btn btn-sm">
+                       <a href="https://github.com/DasKeyboard/DasKeyboard.github.io/issues/new?title=Issue from website page {{page.title}}&body=From URL: {{site.url}}/{{page.path}}&labels=dev: docs - website" class="btn btn-sm">
                           <i class="fa fa-github"></i> File Issue
                       </a>
                    </div>
