--- a/_sass/_prism_overrides.scss
+++ b/_sass/_prism_overrides.scss
@@ -1,5 +1,5 @@
 // Overrides properties from _prism.scss, which is a generated file, see:
-// https://github.com/metadot/DasKeyboard.github.io#syntax-highlighting.
+// https://github.com/DasKeyboard/DasKeyboard.github.io#syntax-highlighting.
 
 .token.operator {
     background: none !important;
