Comment the files and lines related to the login action.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,10 @@
             <a class="page-link" href="{{ "docs/"  | relative_url }}">Docs</a>
             <a class="page-link" href="https://github.com/DasKeyboard/DasKeyboard.github.io">GitHub</a>
             <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
-            <a class="page-link" id="login-link" href="https://q.daskeyboard.com/signin">Login</a>
+            <!-- Waiting for Q cloud side to redirect after login -->
+            <!-- Waiting for Q cloud side to redirect after login -->
+            <!-- Waiting for Q cloud side to redirect after login -->
+            <!-- <a class="page-link" id="login-link" href="https://q.daskeyboard.com/signin">Login</a> -->
           </div>
         </nav>
       </div>
