Remove the call to the js file credentials used when the user is logged in.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
     <script src="{{ "js/sidebar_toggle.js"  | relative_url }}"></script>
     <script src="{{ "js/prism.js" | relative_url }}"></script>
     <script src="{{ "js/tabs.js" | relative_url }}"></script>
-    <script src="{{ "js/credentials.js" | relative_url }}"></script>
+    <!-- <script src="{{ "js/credentials.js" | relative_url }}"></script> -->
     
     
     <script async="" defer="" src="//survey.g.doubleclick.net/async_survey?site=at3ul57xpub2vk3oxt2ytw365i"></script>
