--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
     {% if page.url == '/'%}  <body class="homepage">{% endif %}
     {% comment %} Baseurl of the Page on Github {% endcomment %}
-    {% if page.url == '/DasKeyboard.github.io/'%}  <body class="homepage">{% endif %}
+    {% if page.url == '/Daskeyboard.io/'%}  <body class="homepage">{% endif %}
 
     <div id="overlay-under-drawer"><!-- for the drawer on narrow screens --></div>
     {% include header.html %}
