--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
           </a>
           <div class="trigger">
             <a class="page-link" href="{{ "docs/"  | relative_url }}">Docs</a>
-            <a class="page-link" href="https://github.com/DasKeyboard/DasKeyboard.github.io">GitHub</a>
+            <a class="page-link" href="https://github.com/DasKeyboard/Daskeyboard.io">GitHub</a>
             <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
             <!-- Waiting for Q cloud side to redirect after login -->
             <!-- Waiting for Q cloud side to redirect after login -->
