added ability to login to q-cloud by calling the qSignalCenterApp

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
             <i class="material-icons-extended">more_vert</i>
           </a>
           <div class="trigger">
+            <a class="page-link" href="http://localhost:4200?source=q-documentation">Login to Q Cloud</a>
             <a class="page-link" href="{{ "docs/"  | relative_url }}">Docs</a>
             <a class="page-link" href="https://github.com/DasKeyboard/Daskeyboard.io">GitHub</a>
             <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
@@ -25,3 +26,4 @@
     </div> <!-- /.row -->
   </div> <!-- /.container -->
 </header>
+<script src="{{ "js/login.js" | relative_url }}"></script>
