--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,20 +2,38 @@
   <div class="container-fluid header-contents">
     <div class="row">
       <div class="col-md-12">
-        <i class="fa fa-bars" id="sidebar-toggle-button" aria-hidden="true" style="display:none"></i>
-        <img src="{{ "images/icon.png"  | relative_url }}" alt="Das Keyboard Logo" width="24" height="32" style="vertical-align:middle">
+        <i class="fa fa-bars"
+          id="sidebar-toggle-button"
+          aria-hidden="true"
+          style="display:none"></i>
+        <img src="{{ "
+          images/icon.png
+          "  | relative_url }}"
+          alt="Das Keyboard Logo"
+          width="24"
+          height="32"
+          style="vertical-align:middle">
 
-        <a class="site-title" href="{{ "/"  | relative_url }}">{{ site.title }}</a>
+        <a class="site-title"
+          href="{{ " /
+          "  | relative_url }}">{{ site.title }}</a>
 
         <nav class="site-nav">
-          <a href="#" class="menu-icon">
+          <a href="#"
+            class="menu-icon">
             <i class="material-icons-extended">more_vert</i>
           </a>
           <div class="trigger">
-            <a class="page-link" href="http://localhost:4200?source=q-documentation">Login to Q Cloud</a>
-            <a class="page-link" href="{{ "docs/"  | relative_url }}">Docs</a>
-            <a class="page-link" href="https://github.com/DasKeyboard/Daskeyboard.io">GitHub</a>
-            <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
+            <a class="page-link"
+              href="http://localhost:4200?source=q-documentation">Login to Q Cloud</a>
+            <a class="page-link"
+              href="{{ "
+              docs/
+              "  | relative_url }}">Docs</a>
+            <a class="page-link"
+              href="https://github.com/DasKeyboard/Daskeyboard.io">GitHub</a>
+            <a class="page-link"
+              href="https://daskeyboard.mojohelpdesk.com/">Support</a>
             <!-- Waiting for Q cloud side to redirect after login -->
             <!-- Waiting for Q cloud side to redirect after login -->
             <!-- Waiting for Q cloud side to redirect after login -->
@@ -23,7 +41,13 @@
           </div>
         </nav>
       </div>
-    </div> <!-- /.row -->
-  </div> <!-- /.container -->
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
 </header>
-<script src="{{ "js/login.js" | relative_url }}"></script>
+
+
+<script src="{{ "
+  js/login.js
+  " | relative_url }}"></script>
