#REMOVED login page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
     <script src="{{ "js/sidebar_toggle.js"  | relative_url }}"></script>
     <script src="{{ "js/prism.js" | relative_url }}"></script>
     <script src="{{ "js/tabs.js" | relative_url }}"></script>
-    <script src="{{ "js/login.js" | relative_url }}"></script>
+    <script src="{{ "js/main.js" | relative_url }}"></script>
     <!-- <script src="{{ "js/credentials.js" | relative_url }}"></script> -->
     
     
