added html file flash_notice to factorize code

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,8 @@
             <i class="material-icons-extended">more_vert</i>
           </a>
           <div class="trigger">
+              <a class="page-link" onclick="displayFlashNotice('info','just info')">info</a>
+            <a class="page-link" onclick="displayFlashNotice('error','error')">error</a>
             <a class="page-link" href="http://localhost:4200?source=q-documentation">Login to Q Cloud</a>
             <a class="page-link" href="{{ "docs/"  | relative_url }}">Docs</a>
             <a class="page-link" href="https://github.com/DasKeyboard/Daskeyboard.io">GitHub</a>
