--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,10 +12,20 @@
             <i class="material-icons-extended">more_vert</i>
           </a>
           <div class="trigger">
-            <a class="page-link" href="http://localhost:4200?source=q-documentation">Login to Q Cloud</a>
+            <span id="header-welcome-message"></span>
+            <a class="page-link" 
+              style="display: none;"
+              href="http://localhost:4200?source=q-documentation"
+              id="header-login-message">Login to Q Cloud</a>
+            <a class="page-link" 
+               style="display: none;"
+               id="logout-action"
+               href="#" 
+               onclick="logout()">logout</a>
             <a class="page-link" href="{{ "docs/"  | relative_url }}">Docs</a>
             <a class="page-link" href="https://github.com/DasKeyboard/Daskeyboard.io">GitHub</a>
             <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
+
             <!-- Waiting for Q cloud side to redirect after login -->
             <!-- Waiting for Q cloud side to redirect after login -->
             <!-- Waiting for Q cloud side to redirect after login -->
