added function onLoginToQCloud

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,8 @@
             <span id="header-welcome-message"></span>
             <a class="page-link" 
               style="display: none;"
-              href="http://localhost:4200?source=q-documentation"
+              href="#"
+              onclick="onLoginToQCloud()"
               id="header-login-message">Login to Q Cloud</a>
             <a class="page-link" 
                style="display: none;"
