--- a/_sass/_code_pre.scss
+++ b/_sass/_code_pre.scss
@@ -22,8 +22,7 @@ pre {
 }
 
 pre > code .span-code{
-    background-color: #f8f9fa;
-    border: 1px solid #888;
-    border-radius: 4px;
-    padding: 2px;
+    color: #5cb85c;
+    text-decoration: none;
+    cursor: pointer;
 }
