--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   
   <link rel="stylesheet" href="{{ "css/css-bootstrap/bootstrap.css"  | relative_url }}">
   <link rel="stylesheet" href="{{ "css/main.css"  | relative_url }}"> 
+  <link rel="stylesheet" href="{{ "css/code.css"  | relative_url }}">
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Extended" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro%7CRoboto:500,400italic,300,400" rel="stylesheet">
