converted code .css to be _code_tabs.scss

--- a/css/main.scss
+++ b/css/main.scss
@@ -64,7 +64,8 @@ small, .small{
         "catalog",
         "homepage",
         "responsive_embeds",
-        "tabs"
+        "tabs",
+        "code_tabs"
 ;
 
 aside > :not(pre) > code[class*="language-"], aside > pre[class*="language-"] {
