--- a/_sass/_code_tabs.scss
+++ b/_sass/_code_tabs.scss
@@ -1,10 +1,12 @@
+$tab-accent-color: $brand-color;
+
 .code {
   position: relative;
 }
 
 .code-response {
   padding: 20px;
-  background-color: rgb(92,184,92,0.5);
+  background-color: rgba(92,184,92,0.5);
   border-radius: 20px;
 }
 
@@ -12,7 +14,7 @@
   position: absolute;
   top: 5px;
   right: 10px;
-  color: #5CB85C !important;
+  color: $tab-accent-color
 }
 
 .code a:hover {
