hide 'welcome' login message for small device sizes

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -6,3 +6,11 @@
     line-height: 56px;
     cursor: pointer;
 }
+
+@media screen and (max-width:767px) {
+
+    #header-welcome-message{
+        color: red;
+        display: none !important;
+    }
+}
