added Q API endpoints details section on the sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,4 +21,9 @@
   <ul class="sidebar-items">
     <li><a href="{{ "updates/changelog"  | relative_url }}">Changelog</a></li>
   </ul>
+
+  <li class="sidebar-title">Q API endpoints details</li>
+  <ul class="sidebar-items">
+    <li><a href="{{ "updates/changelog"  | relative_url }}">Changelog</a></li>
+  </ul>
 </ul>
