--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -1,5 +1,5 @@
-/* PrismJS 1.12.2
-http://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+c+ruby+dart+go+java+kotlin+objectivec+php+python+swift&plugins=keep-markup */
+/* PrismJS 1.15.0
+https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+c+bash+ruby+dart+markup-templating+go+java+kotlin+objectivec+php+python+swift&plugins=keep-markup */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -51,7 +51,7 @@ http://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascr
  /* Code blocks */
  pre[class*="language-"] {
 	 padding: 1em;
-	 margin:  0 0 1.5em 0;
+	 margin: .5em 0;
 	 overflow: auto;
  }
  
@@ -106,7 +106,7 @@ http://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascr
  .token.url,
  .language-css .token.string,
  .style .token.string {
-	 color: #a67f59;
+	 color: #9a6e3a;
 	 background: hsla(0, 0%, 100%, .5);
  }
  
