added scss for ressource description and json_request description

--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,9 @@ small, .small{
         "homepage",
         "responsive_embeds",
         "tabs",
-        "code_tabs"
+        "code_tabs",
+        "ressource_description",
+        "json_request_description"
 ;
 
 aside > :not(pre) > code[class*="language-"], aside > pre[class*="language-"] {
