--- a/_sass/_json_request_description.scss
+++ b/_sass/_json_request_description.scss
@@ -25,7 +25,13 @@
 .request-body-table .required{
   color: red;
 }
+
 .request-body-table .required:after{
   content:"\a";
   white-space: pre;
+}
+
+.request-body-table .note:before{
+  content:"Note: ";
+  color: $grey-color
 }
