added required for the name attribute of signals

--- a/_includes/script-examples/signal-endpoint/create-signal/local/request-description.html
+++ b/_includes/script-examples/signal-endpoint/create-signal/local/request-description.html
@@ -9,6 +9,7 @@
     <tr>
       <th scope="row">name</th>
       <td>
+        <span class="required">Required</span>
         <span class="type">string</span>
         <span class="example">'Apple Stock increase'</span>
         <p class="description">Name of the Signal</p>
